bug: d3 is not defined after importing d3.tip

--- a/test/test_asuc.html
+++ b/test/test_asuc.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html> <head>         <title>Test d3flux page</title>         <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.min.js" integrity="sha256-Vjusm6Kh2U7/tb6jBh+MOfxnaf2TWsTph34bMKhC1Qc=" crossorigin="anonymous"></script>         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">         </head> <body><div class="container">
+<!DOCTYPE html> <html> <head>         <meta charset="utf-8">         <title>Test d3flux page</title>         <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.min.js" integrity="sha256-Vjusm6Kh2U7/tb6jBh+MOfxnaf2TWsTph34bMKhC1Qc=" crossorigin="anonymous"></script>         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">         </head> <body><div class="container">
   <div class="row row-offcanvas row-offcanvas-right">
 
       <div class="navbar navbar-static-top" role="navigation">
@@ -80,6 +80,7 @@ require.config({
     cola: "http://marvl.infotech.monash.edu/webcola/cola.v3.min",
     math: "https://cdnjs.cloudflare.com/ajax/libs/mathjs/2.4.0/math.min",
     FileSaver: "https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2014-11-29/FileSaver.min",
+
   },
   shim: {
     'cola': {
@@ -88,7 +89,7 @@ require.config({
   }
 });
 
-require(["cola", "d3", "math", "FileSaver",], function (cola, d3, math, FileSaver) {
+require(["cola", "d3", "math", "FileSaver", ], function (cola, d3, math, FileSaver) {
 
   function main(model) {
     // Render a metabolic network representation of a cobra.Model object.
@@ -927,6 +928,14 @@ require(["cola", "d3", "math", "FileSaver",], function (cola, d3, math, FileSave
 
 
     // Node hover tooltip
+  // var tip = d3.tip()
+  //   .attr('class', 'd3-tip')
+  //   .offset([-10, 0])
+  //   .html(function (d) {
+  //   return "<strong>Frequency:</strong> <span style='color:red'>" + d.id + "</span>";
+  //   })
+
+  //   svg.call(tip);
 
 
 
@@ -1360,6 +1369,9 @@ class Dictionary {
     };
   }
 }
+
+
+
 
 
 
