--- a/main/_AP_complete_adjusted.json.html
+++ b/main/_AP_complete_adjusted.json.html
@@ -116,10 +116,9 @@ var d3flux001model = {"metabolites": [{"id": "atp_c", "name": "ATP", "compartmen
 require.config({
   paths: {
     d3: "https://d3js.org/d3.v3.min",
-    cola: "http://marvl.infotech.monash.edu/webcola/cola.v3.min",
-    math: "https://cdnjs.cloudflare.com/ajax/libs/mathjs/2.4.0/math.min",
-    FileSaver: "https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2014-11-29/FileSaver.min",
-
+    cola: "https://ialab.it.monash.edu/webcola/cola.min",
+    math: "https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.6.0/math.min",
+    FileSaver: "https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.2/FileSaver.min",
   },
   shim: {
     'cola': {
