--- a/main/_AP_complete_adjusted.json.html
+++ b/main/_AP_complete_adjusted.json.html
@@ -27,10 +27,9 @@
 <div class="container-fluid">
   <div class="row">
     <!-- <div class="col-xs-12 col-sm-9"> -->
-    <div class="col-md-10">
-      <div id="d3flux001">
-
-      </div>
+    <div class="col-md-1"></div>
+    <div class="col-md-9">
+      <div id="d3flux001"></div>
     </div>
 
     <!-- <div id="d3flux001_options" class="col-xs-6 col-sm-3 sidebar-offcanvas"> -->
