--- a/main/_AP_complete_adjusted.json.html
+++ b/main/_AP_complete_adjusted.json.html
@@ -27,8 +27,7 @@
 <div class="container-fluid">
   <div class="row">
     <!-- <div class="col-xs-12 col-sm-9"> -->
-    <div class="col-md-1"></div>
-    <div class="col-md-9">
+    <div class="col-md-9 col-md-offset-1">
       <div id="d3flux001"></div>
     </div>
 
