--- a/main/_AP_complete_adjusted.json.html
+++ b/main/_AP_complete_adjusted.json.html
@@ -2,7 +2,6 @@
          <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.min.js" defer async="true" integrity="sha256-Vjusm6Kh2U7/tb6jBh+MOfxnaf2TWsTph34bMKhC1Qc=" crossorigin="anonymous"></script>
          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
          <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" defer async="true" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-         <script src="../templates/point2d.js"></script>
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
          </head> <body><nav id="nav-area" class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
@@ -128,10 +127,11 @@ var d3flux001model = {"metabolites": [{"id": "atp_c", "name": "ATP", "compartmen
 
 require.config({
   paths: {
-    d3: "https://d3js.org/d3.v3.min",
-    cola: "https://ialab.it.monash.edu/webcola/cola.min",
-    math: "https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.6.0/math.min",
-    FileSaver: "https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.2/FileSaver.min",
+    d3: "../include/d3.v3.min",
+    cola: "../include/cola.min",
+    math: "../include/math.min",
+    FileSaver: "../include/FileSaver.min",
+    point2d: "../include/point2d",
   },
   shim: {
     'cola': {
@@ -140,7 +140,7 @@ require.config({
   }
 });
 
-require(["cola", "d3", "math", "FileSaver", ], function (cola, d3, math, FileSaver) {
+require(["cola", "d3", "math", "FileSaver", "point2d", ], function (cola, d3, math, FileSaver) {
 
   function main(model) {
     // Render a metabolic network representation of a cobra.Model object.
